--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,15 +4,19 @@
 @import 'libs';
 @import 'global';
 
-
+.body{
+    mix-blend-mode: color-dodge;
+      opacity: 0.7;
+      background: url(../images/header-bg.jpg);
+}
 .wrapper {}
 
 .header {
-  
-  background-image: url(../images/header-bg.jpg);
+
 }
 
 .nav {
+  padding: 28px 22px;
   background: rgba(0, 0, 0, 0.46);
   display: flex;
   justify-content: space-between;
@@ -21,16 +25,27 @@
 .menu {
   &__list {}
 
-  &__list-item {}
+  &__list-item {
+  
+  }
 
-  &__list-link {}
+  &__list-link {
+   color: #AEAEAE;
+    font-family: Axiforma;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 22px;
+
+  }
 
   &__list-img {}
 }
 
 .menu-left {}
 
-.logo {}
+.logo {
+  padding-left: 46px;
+}
 
 .menu-center {
   display: flex;
@@ -43,11 +58,15 @@
       display: flex;
         justify-content: space-between;
         gap:0 20px;
+        margin-top: -6px;
+        align-items: center;
   }
   &__langavatar{
       display: flex;
         justify-content: space-between;
         gap: 0 40px;
+        align-items: center;
+        margin-top: -10px;
   }
 }
 
